--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bootstrap-icons": "^1.10.3",
     "jquery": "^3.6.3",
     "ngx-bootstrap": "^10.2.0",
+    "ngx-owl-carousel-o": "^15.0.0",
     "popper.js": "^1.16.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
