--- a/package.json
+++ b/package.json
@@ -21,11 +21,15 @@
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
     "@fortawesome/angular-fontawesome": "^0.12.1",
+    "@types/nodemailer": "^6.4.7",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.10.3",
+    "express": "^4.18.2",
     "jquery": "^3.6.3",
     "ngx-bootstrap": "^10.2.0",
     "ngx-owl-carousel-o": "^15.0.0",
+    "nodemailer": "^6.9.1",
+    "nodemailer-sendinblue-transport": "^2.0.1",
     "popper.js": "^1.16.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
